--- a/css/custom.css
+++ b/css/custom.css
@@ -40,13 +40,17 @@ header.head p {
     font-weight: bold;
 }
 
-
 .post h3 {
     font-size: 16px;
 }
 
+.post blockquote p {
+    font-size: 12px;
+    color: green;
+}
+
 .post p {
-    margin-bottom: 5px;
+    margin-bottom: 12px;
 }
 
 .nav.list {
