fix another typo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
             <ul class="nav list well">
 
                 <li class="nav-header">
-                    Articles personelles
+                    Articles personnels
                 </li>
                 {% for post in site.posts %}
                     {% if post.category == "personal" %}
