remove extra slash in site baseurl

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,22 +4,22 @@
     <meta charset="utf8">
     <title>{{ page.title }}</title>
 
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.css" type="text/css" />
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/pastie.css" type="text/css" />
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/custom.css" type="text/css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}css/bootstrap.css" type="text/css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}css/pastie.css" type="text/css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}css/custom.css" type="text/css" />
 </head>
 <body>
 
 <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container">
-            <p class="brand"><a href="{{ site.baseurl | append: '/index.html' }}">Notes gelendir</a></p>
+            <p class="brand"><a href="{{ site.baseurl | append: 'index.html' }}">Notes gelendir</a></p>
             <ul class="nav">
                 <li>
-                    <a href="{{ site.baseurl | append: '/index.html' }}">Accueil</a>
+                    <a href="{{ site.baseurl | append: 'index.html' }}">Accueil</a>
                 </li>
                 <li>
-                    <a href="{{ site.baseurl | append: '/posts.html' }}">Articles</a>
+                    <a href="{{ site.baseurl | append: 'posts.html' }}">Articles</a>
                 </li>
             </ul>
         </div>
