fix phrasing and title

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf8">
-    <title>{{ page.title }}</title>
+    <title>{{ page.title }} - Notes gelendir</title>
 
     <link rel="stylesheet" href="{{ site.baseurl }}css/bootstrap.css" type="text/css" />
     <link rel="stylesheet" href="{{ site.baseurl }}css/pastie.css" type="text/css" />
